--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3,12 +3,35 @@
   height: 100vh;
   object-fit: cover;
 }
-/*定义动画*/
+/*定义动画header下滑*/
 @keyframes dropDown {
   from {
     transform: translateY(-100px);
   }
   to {
+    transform: translateY(0);
+  }
+}
+/*定义动画改变宽度导航变化*/
+@keyframes slideDown {
+  from {
+    height: 0;
+    opacity: 0;
+  }
+  to {
+    height: 100vh;
+    padding-top: 80px;
+    opacity: 1;
+  }
+}
+/*定义动画下拉菜单项变化*/
+@keyframes showMenu {
+  from {
+    opacity: 0;
+    transform: translateY(-1vh);
+  }
+  to {
+    opacity: 1;
     transform: translateY(0);
   }
 }
@@ -525,4 +548,131 @@ footer .scrollTop a {
   right: 30px;
   color: white;
   text-decoration: none;
+}
+@media (max-width: 1100px) {
+  header {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  header nav {
+    display: none;
+  }
+  header .burger {
+    display: block;
+    width: 20px;
+    height: 6px;
+    position: relative;
+    justify-self: end;
+    cursor: pointer;
+  }
+  header .burger .burger-line-1,
+  header .burger .burger-line-2,
+  header .burger .burger-line-3 {
+    width: 20px;
+    height: 2px;
+    background-color: #e7e9ec;
+  }
+  header .burger .burger-line-1 {
+    position: absolute;
+    top: -6px;
+  }
+  header .burger .burger-line-3 {
+    position: absolute;
+    top: 6px;
+  }
+  /*定义.open样式*/
+  header.open nav {
+    display: grid;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: white;
+    grid-auto-rows: max-content;
+    justify-items: end;
+    padding: 0 40px;
+    opacity: 0;
+    animation: slideDown 0.6s ease-out forwards;
+  }
+  header.open nav * {
+    color: #2e2e2e;
+    animation: showMenu 0.5s linear forwards 0.4s;
+    font-size: 18px;
+    margin: 4px 0px;
+    opacity: 0;
+  }
+  header.open nav i.fa {
+    margin-top: 10px;
+  }
+  header.open .burger-line-1,
+  header.open .burger-line-2,
+  header.open .burger-line-3 {
+    background-color: #2e2e2e;
+    transition: 0.4s ease;
+  }
+  header.open .burger-line-1 {
+    transform: rotate(45deg) translate(3px, 5px);
+  }
+  header.open .burger-line-2 {
+    transform: translateX(5px);
+    opacity: 0;
+  }
+  header.open .burger-line-3 {
+    transform: rotate(-45deg) translate(3px, -5px);
+  }
+  header.open .logo {
+    z-index: 40;
+    color: #2e2e2e;
+  }
+  /*less97行*/
+  header.sticky .burger-line-1,
+  header.sticky .burger-line-2,
+  header.sticky .burger-line-3 {
+    background-color: #2e2e2e;
+    transition: 0.4s ease;
+  }
+  .content-wrapper .service .services .service-item .service-title {
+    font-size: 20px;
+  }
+  .content-wrapper .service .services .service-item .service-content {
+    font-size: 14px;
+    line-height: 24px;
+  }
+  .content-wrapper .team-intro .team-members {
+    grid-template-columns: repeat(2, 1fr);
+    row-gap: 36px;
+    column-gap: 6vw;
+  }
+  .content-wrapper .company-activities .activities {
+    grid-template-columns: repeat(2, 1fr);
+    row-gap: 36px;
+  }
+}
+/*屏幕宽度小于992px*/
+@media (max-width: 992px) {
+  .glide .slide-caption h1 {
+    font-size: 48px;
+  }
+  .glide .slide-caption h3 {
+    font-size: 18px;
+  }
+  .content-wrapper .about-us .features {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .content-wrapper .service .services {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: unset;
+    /*取消之前的两行布局*/
+  }
+  .content-wrapper .data-section {
+    grid-template-columns: repeat(2, minmax(200px, auto));
+    padding: 24px 0;
+    /*设置行高为自动，否则放不下*/
+    height: auto;
+    row-gap: 24px;
+    background-size: 200%;
+  }
+  .content-wrapper .showcases .cases .case-item {
+    width: calc(33.33333333vw);
+  }
 }
