--- a/src/css/style.less
+++ b/src/css/style.less
@@ -16,12 +16,32 @@
   height: @fh;
   object-fit: cover;
 }
-/*定义动画*/
+/*定义动画header下滑*/
 @keyframes dropDown {
   from{
     transform: translateY(-100px);
   }
   to{
+    transform: translateY(0);
+  }
+}
+/*定义动画改变宽度导航变化*/
+@keyframes slideDown {
+  from {
+    height: 0;opacity: 0;
+  }
+  to{
+    height: 100vh;padding-top: 80px;opacity: 1;
+  }
+}
+/*定义动画下拉菜单项变化*/
+@keyframes showMenu {
+  from{
+    opacity: 0;
+    transform: translateY(-1vh);
+  }
+  to{
+    opacity: 1;
     transform: translateY(0);
   }
 }
@@ -533,3 +553,180 @@ footer{
     }
   }
 }
+//实现响应式代码
+//获取屏幕大小，用媒体查询
+@media (max-width: 1100px) {
+  header{
+    grid-template-columns: repeat(2, 1fr);
+    nav{
+      display: none;
+    }
+    .burger{
+      display: block;
+      width: 20px;
+      height: 6px;
+      position: relative;
+      justify-self: end;
+      cursor: pointer;
+      .burger-line-1,.burger-line-2,.burger-line-3{
+        width: 20px;
+        height: 2px;
+        background-color: @tecolor;
+      }
+      .burger-line-1{
+         position: absolute;
+         top: -6px;
+       }
+      .burger-line-3{
+        position: absolute;
+        top: 6px;
+      }
+    }
+  }
+  /*定义.open样式*/
+  header.open{
+    nav{
+      display: grid;
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100vw;
+      height: 100vh;
+      background-color: white;
+      //最大值取内容宽度
+      grid-auto-rows: max-content;
+      justify-items: end;
+      padding: 0 40px;
+      opacity: 0;
+      animation: slideDown 0.6s ease-out forwards;
+      *{
+        color: @tedkercolor;
+        animation: showMenu 0.5s linear forwards 0.4s;
+        font-size: 18px;
+        margin: 4px 0px;
+        opacity: 0;
+      }
+      i.fa{
+        margin-top: 10px;
+      }
+    }
+    .burger-line-1,.burger-line-2,.burger-line-3{
+      background-color: @tedkercolor;
+      transition: 0.4s ease;
+    }
+    .burger-line-1{
+      transform: rotate(45deg) translate(3px,5px);
+    }
+    .burger-line-2{
+      transform: translateX(5px);
+      opacity: 0;
+    }
+    .burger-line-3{
+      transform: rotate(-45deg) translate(3px,-5px);
+    }
+    .logo{
+      z-index: 40;
+      color: @tedkercolor;
+    }
+  }
+  /*less97行*/
+  header.sticky {
+    .burger-line-1,.burger-line-2,.burger-line-3{
+      background-color: @tedkercolor;
+      transition: 0.4s ease;
+    }
+  }
+  .content-wrapper{
+    .service{
+      .services{
+        .service-item{
+          .service-title{
+            font-size: 20px;
+          }
+          .service-content{
+            font-size: 14px;
+            line-height: 24px;
+          }
+        }
+      }
+    }
+    .team-intro{
+      .team-members{
+        grid-template-columns: repeat(2, 1fr);
+        row-gap: 36px;
+        column-gap: 6vw;
+      }
+    }
+    .company-activities{
+      .activities{
+        grid-template-columns: repeat(2, 1fr);
+        row-gap: 36px;
+      }
+    }
+  }
+}
+/*屏幕宽度小于992px*/
+@media  (max-width: 992px){
+  .glide{
+    .slide-caption{
+      h1{
+        font-size: 48px;
+      }
+      h3{
+        font-size: 18px;
+      }
+    }
+  }
+  .content-wrapper{
+    .about-us{
+      .features{
+        grid-template-columns: repeat(2,1fr);
+      }
+    }
+    .service{
+      .services{
+        grid-template-columns: repeat(2,1fr);
+        grid-template-rows: unset;/*取消之前的两行布局*/
+      }
+    }
+    .data-section{
+      grid-template-columns: repeat(2,minmax(200px,auto));
+      padding: 24px 0;
+      /*设置行高为自动，否则放不下*/
+      height: auto;
+      row-gap: 24px;
+      background-size: 200%;
+    }
+    .showcases{
+      .cases{
+        .case-item{
+          width: calc(100vw / 3);
+        }
+      }
+    }
+  }
+}
+@media (max-width: 768px) {
+  
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
