--- a/src/css/style.less
+++ b/src/css/style.less
@@ -553,6 +553,59 @@ footer{
     }
   }
 }
+/*定义.open样式*/
+header.open{
+  nav{
+    display: grid;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: white;
+    //最大值取内容宽度
+    grid-auto-rows: max-content;
+    justify-items: end;
+    padding: 0 40px;
+    opacity: 0;
+    animation: slideDown 0.6s ease-out forwards;
+    *{
+      color: @tedkercolor;
+      animation: showMenu 0.5s linear forwards 0.4s;
+      font-size: 18px;
+      margin: 4px 0px;
+      opacity: 0;
+    }
+    i.fa{
+      margin-top: 10px;
+    }
+  }
+  .burger-line-1,.burger-line-2,.burger-line-3{
+    background-color: @tedkercolor;
+    transition: 0.4s ease;
+  }
+  .burger-line-1{
+    transform: rotate(45deg) translate(3px,5px);
+  }
+  .burger-line-2{
+    transform: translateX(5px);
+    opacity: 0;
+  }
+  .burger-line-3{
+    transform: rotate(-45deg) translate(3px,-5px);
+  }
+  .logo{
+    z-index: 40;
+    color: @tedkercolor;
+  }
+}
+/*less97行*/
+header.sticky {
+  .burger-line-1,.burger-line-2,.burger-line-3{
+    background-color: @tedkercolor;
+    transition: 0.4s ease;
+  }
+}
 //实现响应式代码
 //获取屏幕大小，用媒体查询
 @media (max-width: 1100px) {
@@ -581,59 +634,6 @@ footer{
         position: absolute;
         top: 6px;
       }
-    }
-  }
-  /*定义.open样式*/
-  header.open{
-    nav{
-      display: grid;
-      position: absolute;
-      left: 0;
-      top: 0;
-      width: 100vw;
-      height: 100vh;
-      background-color: white;
-      //最大值取内容宽度
-      grid-auto-rows: max-content;
-      justify-items: end;
-      padding: 0 40px;
-      opacity: 0;
-      animation: slideDown 0.6s ease-out forwards;
-      *{
-        color: @tedkercolor;
-        animation: showMenu 0.5s linear forwards 0.4s;
-        font-size: 18px;
-        margin: 4px 0px;
-        opacity: 0;
-      }
-      i.fa{
-        margin-top: 10px;
-      }
-    }
-    .burger-line-1,.burger-line-2,.burger-line-3{
-      background-color: @tedkercolor;
-      transition: 0.4s ease;
-    }
-    .burger-line-1{
-      transform: rotate(45deg) translate(3px,5px);
-    }
-    .burger-line-2{
-      transform: translateX(5px);
-      opacity: 0;
-    }
-    .burger-line-3{
-      transform: rotate(-45deg) translate(3px,-5px);
-    }
-    .logo{
-      z-index: 40;
-      color: @tedkercolor;
-    }
-  }
-  /*less97行*/
-  header.sticky {
-    .burger-line-1,.burger-line-2,.burger-line-3{
-      background-color: @tedkercolor;
-      transition: 0.4s ease;
     }
   }
   .content-wrapper{
@@ -707,7 +707,95 @@ footer{
   }
 }
 @media (max-width: 768px) {
-  
+  .content-wrapper {
+    section{
+      padding: 0 40px;
+    }
+    .company-activities{
+      .activities{
+        grid-template-columns: 1fr;
+        row-gap: 36px;
+      }
+    }
+    .data-section{
+      grid-template-columns: 1fr;
+      background-size: 300%;
+    }
+    .team-intro{
+      .team-members{
+        grid-template-columns: minmax(200px, 400px);
+      }
+    }
+    .service{
+      .services{
+        grid-template-columns: 1fr;
+      }
+    }
+    .about-us{
+      .features{
+        grid-template-columns: 1fr;
+      }
+    }
+    .showcases{
+      .cases{
+        .case-item{
+          width: calc(100vw / 2);
+          height: 30vw;
+        }
+      }
+    }
+  }
+  footer {
+    .footer-menus{
+      padding: 0 40px;
+      /*三列布局*/
+      grid-template-columns: 2fr repeat(2,1fr);
+      row-gap: 24px;
+      .contact-us{
+        grid-row: ~"1 / 3";
+      }
+      .footer-menu{
+        text-align: right;
+      }
+    }
+  }
+}
+/*570px*/
+@media (max-width: 570px) {
+  .glide{
+    .slide-caption{
+      h1{
+        font-size: 28px;
+      }
+      h3{
+        font-size: 14px;
+      }
+      .explore-btn{
+        font-size: 14px;
+        padding: 8px 18px;
+      }
+    }
+  }
+  .content-wrapper{
+    .showcases{
+      .cases{
+        .case-item{
+          width: 100vw;
+          height: 60vw;
+        }
+      }
+    }
+  }
+  footer {
+    .footer-menus{
+      /*一列布局*/
+      grid-template-columns: 1fr;
+      .footer-menu{
+        justify-self: start;
+        text-align: left;
+      }
+    }
+  }
 }
 
 
